# kyte-python-api-template

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  directory-tree.md  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: subagent-docs-analyst.md  subagent-python-architect.md  subagent-qa-python.md  subagent-security-analyst.md
.claude/commands/: create-subagent.md  setup-project.md
.claude/hooks/: notify.sh
.claude/skills/kyte-python-patterns/: SKILL.md  fastapi.md  testing.md
.github/workflows/: ci.yml  docker.yml
app/: config.py  main.py
app/api/: health.py
app/api/v1/: router.py
app/core/: exceptions.py  security.py
app/models/: common.py
tests/: conftest.py  test_config.py  test_exceptions.py  test_health.py  test_lifespan.py  test_security.py
